--- a/app/build.gradle
+++ b/app/build.gradle
@@ -62,4 +62,8 @@ dependencies {
 
     implementation 'com.nex3z:notification-badge:1.0.2'
     implementation 'de.hdodenhof:circleimageview:2.2.0'
+
+    implementation 'com.squareup.retrofit2:converter-scalars:2.3.0'
+    implementation 'com.braintreepayments.api:drop-in:3.3.0'
+    implementation 'com.loopj.android:android-async-http:1.4.9'
 }
