--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -65,7 +65,8 @@
             android:label="@string/title_activity_maps" />
         <activity android:name=".FoodActivity" />
         <activity android:name=".CartActivity" />
-        <activity android:name=".FavouriteListActivity"></activity>
+        <activity android:name=".FavouriteListActivity" />
+        <activity android:name=".ShowOrderActivity"></activity>
     </application>
 
 </manifest>
