Users are able to see their placed orders according to how they want to filter it : e.g new orders, cancelled orders, orders in process and orders that are done for picking up.
The second feature implemented would be the function for users to tap onto their placed orders to see in detail what they have ordered.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -66,7 +66,8 @@
         <activity android:name=".FoodActivity" />
         <activity android:name=".CartActivity" />
         <activity android:name=".FavouriteListActivity" />
-        <activity android:name=".ShowOrderActivity"></activity>
+        <activity android:name=".ShowOrderActivity" />
+        <activity android:name=".OrderDetailActivity"></activity>
     </application>
 
 </manifest>
