--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,6 +29,7 @@ dependencies {
     implementation 'com.google.android.gms:play-services-nearby:11.8.0'
 
     implementation 'com.android.support:support-v4:27.1.1'
+    implementation 'com.google.firebase:firebase-messaging:11.8.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
@@ -67,3 +68,5 @@ dependencies {
     implementation 'com.braintreepayments.api:drop-in:3.3.0'
     implementation 'com.loopj.android:android-async-http:1.4.9'
 }
+
+apply plugin: 'com.google.gms.google-services'
